--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "morgan": "^1.10.1",
-    "sequelize": "^6.37.7",
-    "tedious": "^19.2.1"
+    "msnodesqlv8": "^5.1.5",
+    "mssql": "^12.2.0"
   }
 }
