--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "msnodesqlv8": "^5.1.5",
     "mssql": "^12.2.0"
+  },
+  "optionalDependencies": {
+    "msnodesqlv8": "^5.1.5"
   }
 }
